Fixing CSS Collisions

--- a/options.html
+++ b/options.html
@@ -63,5 +63,13 @@ function saveOptions() {
   <br />
   <input type="submit" value="Save" />
   </form>
+  <br/>
+  <form>
+    <table>
+      <tr>
+        <th>Service</th><th>Login Name</th>
+      </tr>
+    </table>
+  </form>
 </body>
 </html>
